# experiment-toolkit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
scripts/: make_hero.py
src/experiment_toolkit/: __init__.py  cli.py  cs_did.py  cuped.py  ratio.py  sample_size.py  sensitivity.py  sequential.py
tests/: test_toolkit.py  test_v02_additions.py
