[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "experiment-toolkit"
version = "0.1.0"
description = "Small, well-tested utilities for online controlled experiments: sample size, CUPED, sequential testing, delta-method variance."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Tejas Wavde" }]
keywords = ["experimentation", "ab-testing", "causal-inference", "statistics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.3", "mypy>=1.8"]

[project.urls]
Homepage = "https://github.com/wavde/experiment-toolkit"
Issues = "https://github.com/wavde/experiment-toolkit/issues"

[project.scripts]
experiment-toolkit = "experiment_toolkit.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/experiment_toolkit"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
